fix: contrast ratio of Vanilla theme.

--- a/src/styles/ide/_vanilla.scss
+++ b/src/styles/ide/_vanilla.scss
@@ -13,12 +13,12 @@
       text: black,
       comma: black,
       parenthesis: black,
-      language: #D73A49,
+      language: #D32939,
       function: #6F42C1,
       argument: black,
       number: #005CC5,
-      type: #E36209,
-      primitive-type: #D73A49
+      type: #BB4E03,
+      primitive-type: #D32939
     ),
     dark: (
       background: #2B2B2B,
@@ -28,12 +28,12 @@
       text: #C8C8C8,
       comma: #C8C8C8,
       parenthesis: #C8C8C8,
-      language: #D73A49,
-      function: #9f6bff,
+      language: #FF5667,
+      function: #AF84FF,
       argument: #C8C8C8,
       number: #005CC5,
-      type: #E36209,
-      primitive-type: #D73A49
+      type: #FF822E,
+      primitive-type: #FF5667
     )
   );
 }
